--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lifebm",
+  "name": "lifebm-pro",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,8 @@
     "react": "^19.2.3",
     "@google/genai": "^1.37.0",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0"
+    "lucide-react": "^0.562.0",
+    "firebase": "^12.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
